added compile flag to show all warnings and reformated a few files

--- a/VE_CE/Makefile
+++ b/VE_CE/Makefile
@@ -27,9 +27,11 @@ NO_DEPEND= YES
 #DEBUG_APP?= TRUE
 OPTIM_APP?= TRUE
 
-EXTRA_CFLAGS+=
+EXTRA_CFLAGS+= 
 
-EXTRA_CXXFLAGS+=
+EXTRA_CXXFLAGS+= -Wall
+
+EXTRA_LDFLAGS+= -Wall
 
 EXTRA_DEFS+=
 
