Getting things back to a working state

--- a/VE_Open/XML/CAD/Makefile
+++ b/VE_Open/XML/CAD/Makefile
@@ -45,7 +45,8 @@ SRCS=\
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_XMLLib -lVE_ShaderLib
-
+EXTRA_CXXFLAGS+= -g
+EXTRA_LDFLAGS+= -g
 $(shell mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE))
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
 
