event handler to set the name of a node from the GUI

--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -105,9 +105,11 @@ SRCS=\
    cfdWriteTraverser.cxx \
    cfdObjectHandler.cxx \
    CADEventHandler.cxx \
+   CADDeleteNodeEH.cxx \
    CADAddNodeEH.cxx \
    CADAddAttributeEH.cxx \
    CADSetActiveAttributeEH.cxx \
+   CADSetNameEH.cxx \
    CADTransformEH.cxx 
 
 			
