--- a/VE_CE/Utilities/Makefile
+++ b/VE_CE/Utilities/Makefile
@@ -50,9 +50,9 @@ SRCS=\
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 #EXTRA_INCLUDES+= -I$(VJ_DEPS_DIR)/include
 #EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Builder/Translator
-EXTRA_LDFLAGS+= -g
+#EXTRA_LDFLAGS+= -g
 EXTRA_LDFLAGS+= -Wall
-EXTRA_CXXFLAGS+= -g
+#EXTRA_CXXFLAGS+= -g
 EXTRA_CXXFLAGS+= -Wall
 #-L$(VJ_DEPS_DIR)/lib
 #DSO_PLUGIN_DEPS+= $(shell vrjuggler-config --extra-libs)
