--- a/VE_Builder/Translator/Makefile
+++ b/VE_Builder/Translator/Makefile
@@ -27,6 +27,7 @@ SRCS=\
    jdMAPReader.cpp \
    enSightGoldReader.cpp \
    ansysReader.cpp \
+   ansysReader10.cpp \
    tecplotReader.cpp \
    vtkCleanUnstructuredGrid.cxx
 #   vtkEnSightFortranBinaryReader.cxx
