Added Ansys10 translator to windows build

--- a/VE_Builder/Translator/Translator.vcproj
+++ b/VE_Builder/Translator/Translator.vcproj
@@ -120,6 +120,9 @@
 				RelativePath=".\ansysReader.cpp">
 			</File>
 			<File
+				RelativePath=".\ansysReader10.cpp">
+			</File>
+			<File
 				RelativePath=".\avsReader.cpp">
 			</File>
 			<File
@@ -183,6 +186,9 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
 			<File
 				RelativePath=".\ansysReader.h">
+			</File>
+			<File
+				RelativePath=".\ansysReader10.h">
 			</File>
 			<File
 				RelativePath=".\cfdGrid2Surface.h">
