--- a/VE_Conductor/DefaultPlugin/Makefile
+++ b/VE_Conductor/DefaultPlugin/Makefile
@@ -1,7 +1,7 @@
 # Create the OS-dependent directory name
 CFDHOSTTYPE?=	$(DZR_HOSTTYPE)
-PLUGIN = DefaultPlugin 
-APP_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/lib$(PLUGIN).so
+PLUGIN = DefaultPlugin
+APP_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/$(PLUGIN).so
 
 VE_CONDUCTOR_HOME = $(VE_SUITE_HOME)/VE_Conductor
 
