--- a/VE_Open/XML/Model/Makefile
+++ b/VE_Open/XML/Model/Makefile
@@ -45,8 +45,8 @@ SRCS=\
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 #EXTRA_INCLUDES+= -I$(VJ_DEPS_DIR)/include
 #EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Builder/Translator
-#EXTRA_LDFLAGS+= -g
-#EXTRA_CXXFLAGS+= -g
+EXTRA_LDFLAGS+= -g
+EXTRA_CXXFLAGS+= -g
 #EXTRA_LDFLAGS+= -L$(VJ_DEPS_DIR)/lib
 DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_XMLLib
 $(shell mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE))
