blending should be set after loading the shader information...otherwise the shader helper clears the current stateset:w

--- a/VE_SceneGraph/Utilities/Makefile
+++ b/VE_SceneGraph/Utilities/Makefile
@@ -61,6 +61,9 @@ DEPDIR= $(CFDHOSTTYPE)_VE_SceneGraph_UtilitiesLib
 
 #BUILD_TYPE=	dbg
 
+EXTRA_CXXFLAGS+= -g
+EXTRA_LDFLAGS+= -g
+
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 srcdir= .
 DSO_PLUGIN_DEPS+= -L${VE_SUITE_HOME}/lib/${CFDHOSTTYPE} -lVE_XMLLib -lVE_ShaderLib -lVE_CADLib
