added default plugin to default build on unix systems

--- a/VE_Conductor/Makefile
+++ b/VE_Conductor/Makefile
@@ -33,7 +33,8 @@
 DIRS= ${VE_SUITE_HOME}/VE_Conductor/Network \
       ${VE_SUITE_HOME}/VE_Conductor/GUIPlugin \
       ${VE_SUITE_HOME}/VE_Conductor/Utilities \
-      ${VE_SUITE_HOME}/VE_Conductor/Framework 
+      ${VE_SUITE_HOME}/VE_Conductor/Framework \
+      ${VE_SUITE_HOME}/VE_Conductor/DefaultPlugin 
 
 # -----------------------------------------------------------------------------
 # Build targets.
@@ -45,7 +46,8 @@ all: $(DIRS)
 ${VE_SUITE_HOME}/VE_Conductor/Network \
 ${VE_SUITE_HOME}/VE_Conductor/GUIPlugin \
 ${VE_SUITE_HOME}/VE_Conductor/Utilities \
-${VE_SUITE_HOME}/VE_Conductor/Framework::
+${VE_SUITE_HOME}/VE_Conductor/Framework \
+${VE_SUITE_HOME}/VE_Conductor/DefaultPlugin::
 	cd $@ && $(MAKE)
 
 # -----------------------------------------------------------------------------
