removed the parameter file from startup which will probably cause the app to crash. also removed the dependency on interface package. also made executive a singleton. added eventhandler to set active model from the design canvas. i have to add the gui code to do this.

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -68,3 +68,9 @@ cleandepend:
             cd $$dir && $(MAKE) cleandepend ;		\
             cd .. ;				\
         done
+
+clobber:
+	@for dir in $(DIRS) ; do		\
+            cd $$dir && $(MAKE) clobber ;		\
+            cd .. ;				\
+        done
