--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -104,6 +104,7 @@ SRCS=\
    cfdRawNodeWriteTraverser.cxx \
    cfdWriteTraverser.cxx \
    cfdObjectHandler.cxx \
+   ActiveModelEventHandler.cxx\
    CADEventHandler.cxx \
    CADDeleteNodeEH.cxx \
    CADAddNodeEH.cxx \
@@ -116,7 +117,12 @@ SRCS=\
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_TextureBased
-DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_XMLLib -lVE_CADLib -lVE_SceneGraph_UtilitiesLib -lVE_SceneGraphLib$(OSG)$(PATENTED_TAG) -lVE_UtilLib
+DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) 
+DSO_PLUGIN_DEPS+= -lVE_XMLLib 
+DSO_PLUGIN_DEPS+= -lVE_CADLib 
+DSO_PLUGIN_DEPS+= -lVE_SceneGraph_UtilitiesLib 
+DSO_PLUGIN_DEPS+= -lVE_SceneGraphLib$(OSG)$(PATENTED_TAG) 
+DSO_PLUGIN_DEPS+= -lVE_UtilLib
 DSO_PLUGIN_DEPS+= $(shell vrjuggler-config vrj --extra-libs)
 $(shell mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE))
 
