added default plugin code. jsut an initial implementation and no windows build yet either

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -36,7 +36,8 @@ DIRS= ${VE_SUITE_HOME}/VE_Xplorer/VE_Util \
    ${VE_SUITE_HOME}/VE_TextureBased \
    ${VE_SUITE_HOME}/VE_Xplorer/VE_XplorerHandlers \
    ${VE_SUITE_HOME}/VE_Xplorer/VE_GraphicalPlugin \
-   ${VE_SUITE_HOME}/VE_Xplorer/VE_GE
+   ${VE_SUITE_HOME}/VE_Xplorer/VE_GE\
+   ${VE_SUITE_HOME}/VE_Xplorer/DefaultGraphicalPlugin
 
 # -----------------------------------------------------------------------------
 # Build targets.
@@ -51,7 +52,8 @@ ${VE_SUITE_HOME}/VE_SceneGraph/Utilities \
 ${VE_SUITE_HOME}/VE_TextureBased \
 ${VE_SUITE_HOME}/VE_Xplorer/VE_XplorerHandlers \
 ${VE_SUITE_HOME}/VE_Xplorer/VE_GraphicalPlugin \
-${VE_SUITE_HOME}/VE_Xplorer/VE_GE::
+${VE_SUITE_HOME}/VE_Xplorer/VE_GE\
+${VE_SUITE_HOME}/VE_Xplorer/DefaultGraphicalPlugin::
 	cd $@ && $(MAKE)
 
 # -----------------------------------------------------------------------------
