add fix to resolve building the the xml code. also added support to hopefully be able to specify cad in real time.

--- a/VE_Conductor/DefaultPlugin/Makefile
+++ b/VE_Conductor/DefaultPlugin/Makefile
@@ -55,6 +55,7 @@ STATIC_OFF= @APP_LINK_STATIC_OFF@
 include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
 
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.ace_tao.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
 
 # -----------------------------------------------------------------------------
