--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -116,6 +116,8 @@ SRCS=\
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
+EXTRA_LDFLAGS+= -g
+EXTRA_CXXFLAGS+= -g
 EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_TextureBased
 DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) 
 DSO_PLUGIN_DEPS+= -lVE_XMLLib 
