Added material edit menu...still haven't put the plugs in to send info across to xplorer

--- a/VE_Conductor/Framework/Makefile
+++ b/VE_Conductor/Framework/Makefile
@@ -17,6 +17,7 @@ SRCS=\
    App.cpp \
    Avail_Modules.cpp \
    CADNodeManagerDlg.cxx \
+   CADMaterialEditMenu.cxx \
    CADNodeMenu.cxx \
    CADNodePropsDlg.cxx \
    Frame.cpp \
