--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -191,6 +191,9 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\CADMaterialEditMenu.cxx">
+			</File>
+			<File
 				RelativePath=".\CADNodeManagerDlg.cxx">
 			</File>
 			<File
@@ -198,6 +201,9 @@
 			</File>
 			<File
 				RelativePath=".\CADNodePropsDlg.cxx">
+			</File>
+			<File
+				RelativePath=".\CADOpacitySliderDlg.cxx">
 			</File>
 			<File
 				RelativePath="Frame.cpp">
@@ -534,6 +540,9 @@
 				RelativePath="Avail_Modules.h">
 			</File>
 			<File
+				RelativePath=".\CADMaterialEditMenu.h">
+			</File>
+			<File
 				RelativePath=".\CADNodeManagerDlg.h">
 			</File>
 			<File
@@ -541,6 +550,9 @@
 			</File>
 			<File
 				RelativePath=".\CADNodePropsDlg.h">
+			</File>
+			<File
+				RelativePath=".\CADOpacitySliderDlg.h">
 			</File>
 			<File
 				RelativePath="Frame.h">
