--- a/VE_Builder/Utilities/mk/removeVtkCellsOutsideBox/removeVtkCellsOutsideBox.vcproj
+++ b/VE_Builder/Utilities/mk/removeVtkCellsOutsideBox/removeVtkCellsOutsideBox.vcproj
@@ -12,7 +12,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="Debug"
+			OutputDirectory="$(VE_SUITE_HOME)/bin/win32"
 			IntermediateDirectory="Debug"
 			ConfigurationType="1"
 			CharacterSet="2">
@@ -43,8 +43,7 @@
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-				CommandLine="copy $(TargetPath) %VE_SUITE_HOME%\bin\win32\$(TargetFileName)"/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
