fluent loader update

--- a/VE_Builder/Translator/DataLoader/Makefile
+++ b/VE_Builder/Translator/DataLoader/Makefile
@@ -34,7 +34,8 @@ CFDUNAME = $(shell uname)
 #__________________________________________________________
 # list the source files that are in current directory
 SRCS=\
-   DataLoader.cxx
+   DataLoader.cxx\
+   FluentTranslator.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 #EXTRA_INCLUDES+= -I$(VJ_DEPS_DIR)/include
