--- a/VE_Builder/Translator/DataLoader/Makefile
+++ b/VE_Builder/Translator/DataLoader/Makefile
@@ -36,7 +36,8 @@ CFDUNAME = $(shell uname)
 SRCS=\
    DataLoader.cxx\
    FluentTranslator.cxx\
-   MFIXTranslator.cxx
+   MFIXTranslator.cxx\
+   EnSightTranslator.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 #EXTRA_INCLUDES+= -I$(VJ_DEPS_DIR)/include
