hooked up the color and opacity GUI to xplorer...still need face/color modes and shininess but these should be simple

--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -105,6 +105,7 @@ SRCS=\
    cfdWriteTraverser.cxx \
    cfdObjectHandler.cxx \
    ActiveModelEventHandler.cxx\
+   AttributeEventHandler.cxx \
    CADEventHandler.cxx \
    CADDeleteNodeEH.cxx \
    CADAddNodeEH.cxx \
@@ -112,7 +113,8 @@ SRCS=\
    CADSetActiveAttributeEH.cxx \
    CADSetNameEH.cxx \
    CADToggleEH.cxx \
-   CADTransformEH.cxx 
+   CADTransformEH.cxx \
+   MaterialUpdateEH.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
