finishing up material gui stuff

--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -114,6 +114,7 @@ SRCS=\
    CADSetNameEH.cxx \
    CADToggleEH.cxx \
    CADTransformEH.cxx \
+   MaterialModeUpdateEH.cxx \
    MaterialUpdateEH.cxx
 
 			
