tied in new gui to load datasets. now just have to put the guts in it

--- a/VE_Conductor/Framework/Makefile
+++ b/VE_Conductor/Framework/Makefile
@@ -21,6 +21,7 @@ SRCS=\
    CADNodeMenu.cxx \
    CADNodePropsDlg.cxx \
    CADOpacitySliderDlg.cxx \
+   DataSetLoaderUI.cxx\
    Frame.cpp \
    Network.cpp \
    NavigationPane.cxx \
