--- a/VE_Open/XML/Model/Makefile
+++ b/VE_Open/XML/Model/Makefile
@@ -49,6 +49,7 @@ EXTRA_LDFLAGS+= -g
 EXTRA_CXXFLAGS+= -g
 #EXTRA_LDFLAGS+= -L$(VJ_DEPS_DIR)/lib
 DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_XMLLib
+DSO_PLUGIN_DEPS+= -lVE_CADLib
 $(shell mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE))
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
 
