--- a/VE_Conductor/Utilities/Makefile
+++ b/VE_Conductor/Utilities/Makefile
@@ -37,7 +37,8 @@ SRCS=\
    Module.cxx\
    Polygon.cxx\
    Tag.cxx\
-   CADTreeBuilder.cxx
+   CADTreeBuilder.cxx \
+   DualSlider.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 #EXTRA_INCLUDES+= -I$(VJ_DEPS_DIR)/include
