fixes to get vistabs working again. vis features are fragile and still need work but it is possible to start testing fis features again

--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -105,6 +105,7 @@ SRCS=\
    cfdWriteTraverser.cxx \
    cfdObjectHandler.cxx \
    ActiveModelEventHandler.cxx\
+   AddVTKDataSetEventHandler.cxx\
    AttributeEventHandler.cxx \
    CADEventHandler.cxx \
    CADDeleteNodeEH.cxx \
