ROI dialog for tbased vis...not tested AT ALL, in fact it isn't plugged into Conductor yet

--- a/VE_Conductor/Framework/Makefile
+++ b/VE_Conductor/Framework/Makefile
@@ -16,6 +16,7 @@ srcdir= .
 SRCS=\
    App.cpp \
    Avail_Modules.cpp \
+   BaseDialog.cxx \
    CADNodeManagerDlg.cxx \
    CADMaterialEditMenu.cxx \
    CADNodeMenu.cxx \
@@ -28,6 +29,7 @@ SRCS=\
    OrbThread.cpp \
    paraThread.cpp \
    PluginLoader.cpp \
+   ROIDialog.cxx \
    StreamersPane.cxx \
    VjObsC.cpp \
    VjObsS.cpp \
